--- a/Core/Packages/manifest.json
+++ b/Core/Packages/manifest.json
@@ -7,18 +7,19 @@
     "com.svermeulen.extenject": "9.2.0-stcf3",
     "com.system-community.systemruntimecompilerservicesunsafe": "6.0.0",
     "com.unity.2d.tilemap": "1.0.0",
-    "com.unity.2d.tilemap.extras": "3.1.2",
-    "com.unity.ai.navigation": "1.1.5",
-    "com.unity.cinemachine": "2.9.7",
-    "com.unity.collab-proxy": "2.3.1",
-    "com.unity.feature.2d": "2.0.0",
-    "com.unity.feature.development": "1.0.1",
-    "com.unity.ide.rider": "3.0.31",
-    "com.unity.inputsystem": "1.7.0",
-    "com.unity.textmeshpro": "3.0.9",
-    "com.unity.timeline": "1.7.6",
-    "com.unity.ugui": "1.0.0",
-    "com.unity.visualscripting": "1.9.4",
+    "com.unity.2d.tilemap.extras": "4.1.0",
+    "com.unity.ai.navigation": "2.0.7",
+    "com.unity.cinemachine": "2.10.3",
+    "com.unity.collab-proxy": "2.7.1",
+    "com.unity.feature.2d": "2.0.1",
+    "com.unity.feature.development": "1.0.2",
+    "com.unity.ide.rider": "3.0.36",
+    "com.unity.inputsystem": "1.14.0",
+    "com.unity.multiplayer.center": "1.0.0",
+    "com.unity.timeline": "1.8.7",
+    "com.unity.ugui": "2.0.0",
+    "com.unity.visualscripting": "1.9.6",
+    "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
