--- a/Core/Assets/TendedTarsier.Core.asmdef
+++ b/Core/Assets/TendedTarsier.Core.asmdef
@@ -13,7 +13,8 @@
         "GUID:029c1c1b674aaae47a6841a0b89ad80e",
         "GUID:26f794512b3214eab8a82dd1539e78f2",
         "GUID:4307f53044263cf4b835bd812fc161a4",
-        "GUID:0a0471484b079be408cb3a0d7fe94736"
+        "GUID:0a0471484b079be408cb3a0d7fe94736",
+        "GUID:1491147abca9d7d4bb7105af628b223e"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
